--- a/tiles.less
+++ b/tiles.less
@@ -1,12 +1,20 @@
 /* Colour Definitions */
-@lightGrey: #aaa;
+@lightGrey: #eee;
 @lightBlue: #368afa;
-@lightRed: #fa3636;
+@lightRed: #f18789;
+@lightGreen: #97bb71;
 
+@darkGrey: #aaa;
+@darkishGrey: #ccc;
 @darkBlue: #317bdd;
 @darkRed: #df3030;
 
-@hoverGrey: #eee;
+@hoverGrey: #ddd;
+
+/*  vars    */
+@navbarHeight: 64px;
+@tileWidth: 300px;
+@tileHeight: 300px;
 
 /*  Basic properties  */
 * {
@@ -19,19 +27,21 @@ html {
 }
 
 /*  Global classes  */
-.flex-row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-}
 .flex-column {
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: center;
-  text-align: left;
-  overflow-y: scroll;
+  align-items: center;
+}
+.flex-divider {
+  page-break-inside: avoid;
+  width: 1px;
+  height: 100%;
+  background-color: @darkGrey;
+  margin-left: 20px;
+  margin-right: 20px;
+  position: relative;
 }
 .max-height {
   height: 100%;
@@ -49,60 +59,251 @@ html {
 .blue-btn:hover {
   background-color: @darkBlue;
 }
-.tile-buttons {
-  margin-bottom: 10px;
+/* label color */
+.input-field label {
+  top: 0.5em;
+  left: 0.15em;
+  color: @darkishGrey;
 }
-.tile-form button,
-.category-form button {
-  border: none;
-  outline: none;
-  font-size: 16px;
-  color: #fff;
-  cursor: pointer;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-radius: 5px;
+/* label focus color */
+.input-field input:focus + label ,
+.input-field textarea:focus + label {
+  color: @lightRed !important;
 }
-button.save-category,
-button.delete-tile,
-button.edit-tile {
-  float: right;
+/* label underline focus color */
+.input-field input:focus ,
+.input-field textarea:focus {
+  border-bottom: 1px solid @lightRed;
+  box-shadow: 0 1px 0 0 @lightRed;
 }
-button.save-category,
-button.save-tile {
-  display: none;
+/* valid color */
+.input-field input.valid ,
+.input-field textarea.valid {
+  border-bottom: 1px solid @darkishGrey;
+  box-shadow: 0 1px 0 0 @darkishGrey;
+}
+/* invalid color */
+.input-field input.invalid ,
+.input-field textarea.invalid {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000;
+}
+.input-field .prefix {
+  color: @darkishGrey;
+}
+/* icon prefix focus color */
+.input-field .prefix.active {
+  color: @darkGrey;
 }
 .text-input {
   border: none;
   outline: none;
   border-radius: 5px;
   font-size: 16px;
+  color: #000;
 }
 .text-input:hover,
 .text-input:focus {
   background: @hoverGrey;
+  color: #000;
 }
-
+/*  Toast notification styles:   */
+#toast-container {
+  cursor: pointer;
+  display: block;
+  position: fixed;
+  z-index: 1001;
+}
+#toast-container.pusher,
+#toast-container.dimmed {
+  background-color: initial;
+  min-height: initial;
+}
+  @media only screen and (max-width : 600px) {
+    #toast-container {
+      min-width: 100%;
+      bottom: 0%;
+    }
+  }
+  @media only screen and (min-width : 601px) and (max-width : 992px) {
+    #toast-container {
+      min-width: 30%;
+      left: 5%;
+      bottom: 7%;
+    }
+  }
+  @media only screen and (min-width : 993px) {
+    #toast-container {
+      min-width: 8%;
+      top: initial;
+      right: initial;
+      bottom: 7%;
+      left: 20px;
+    }
+  }
+.toast *::before {
+  content: " ";
+  white-space: pre;
+}
+.toast *::after {
+  content: " ";
+  white-space: pre;
+}
+.toast {
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  background-clip: padding-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  top: 0px;
+  width: auto;
+  clear: both;
+  margin-top: 10px;
+  position: relative;
+  max-width: 100%;
+  min-height: 48px;
+  height: auto;
+  line-height: 1.7em;
+  background-color: #323232;
+  padding: 15px;
+  font-size: 1.1rem;
+  font-weight: 400;
+  color: #fff;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+.toast .btn, .toast .btn-large, .toast .btn-flat {
+  margin: 0;
+  margin-left: 3rem;
+}
+.toast.rounded {
+  border-radius: 24px;
+}
+@media only screen and (max-width : 600px) {
+  .toast {
+    width: 100%;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
+    background-clip: padding-box;
+  }
+}
+@media only screen and (min-width : 601px) and (max-width : 992px) {
+  .toast {
+    float: left;
+  }
+}
+@media only screen and (min-width : 993px) {
+  .toast {
+    float: left;
+  }
+}
+.danger {
+  background-color: @lightRed;
+}
+.success {
+  background-color: @lightGreen;
+}
+.info {
+  background-color: @lightBlue;
+}
 
 /*  Structure-specific styling    */
-nav .brand-logo {
+nav {
+  position: fixed;
+  height: @navbarHeight;
   padding-left: 15px;
+  background-color: transparent;
+  box-shadow: none;
+  color: #000;
 }
-nav ul,
-nav ul li {
+nav .input-field {
+  display: inline-block;
+  margin-top: 0;
+}
+nav .user-name {
+  font-size: 2.1em !important;
+  color: #000;
+}
+nav input#user-profile-name {
+  max-width: 250px;
+  margin-top: 14px;
+  right: 5px;
+  position: relative;
+  padding-left: 5px;
+  box-sizing: border-box;
+}
+nav input#user-profile-name:focus {
+  border-bottom: 2px solid @lightRed;
+}
+nav .nav-wrapper i {
+  line-height: inherit;
+}
+#right-menu-collapse {
+  position: absolute;
+  right: 0;
   height: 100%;
+  width: 70px;
+  text-align: center;
+  color: @lightRed;
 }
-nav ul li {
+#right-menu-collapse:hover {
+  color: #fff;
+  background-color: @darkRed;
+}
+#right-menu {
+  background: #eee;
+  z-index: 1002;
+}
+#brand-top-right {
+  box-sizing: border-box;
+  border-bottom: 2px solid;
+}
+#right-menu ul {
+  height: 100%;
+  margin: 0;
+}
+#right-menu ul li {
   cursor: pointer;
+  height: @navbarHeight;
+  font-size: 18px;
 }
-.button-collapse {
-  float: right !important;
-  padding-right: 5px;
+#right-menu ul li:hover {
+  background-color: @hoverGrey;
+}
+#right-menu ul li a {
+  display: block;
+  height: 100%;
+  width: 100%;
+  padding: 19px;
+  color: @darkRed;
 }
 
+
+#pusher-container {
+  height: 100%;
+}
 #tile-container {
   position: relative;
-  top: 16px;
+  top: @navbarHeight;
+  height: calc(~"100% - @{navbarHeight}");
+  overflow-y: hidden;
+  overflow-x: auto;
+  text-align: center;
 }
 #category-edit-list {
   margin-left: 10%;
@@ -111,58 +312,185 @@ nav ul li {
 .category {
   padding: 10px;
   padding-top: 30px;
-  border-left: 1px solid @lightGrey;
+  border-left: 1px solid @darkGrey;
   position: relative;
   overflow-x: hidden;
   overflow-y: auto;
 }
 .category-title {
+  height: 100%;
+  width: 45px;
+  margin-left: 10px;
+  margin-right: 5px;
+  border-right: 1px solid @darkGrey;
+  position: relative;
+}
+.category-title .category-title-text {
+  transform: rotate(-90deg);
+  transform-origin: calc(~"100% - 22px") 30% 0;
+  margin: 0 auto;
+  white-space: nowrap;
+  font-variant: small-caps;
+  font-size: 22px;
   position: absolute;
-  top: 0px;
-  left: 15px;
-  font-weight: bold;
-  font-size: 20px;
+  top: 20px;
+  right: 5px;
 }
 .tile {
-  width: 280px;
-  height: 280px;
-  margin: 5px;
+  width: @tileWidth;
+  height: @tileHeight;
+  margin: 15px;
   border: 10px solid;
+  border-bottom: none;
   border-radius: 10px;
-  display: inline-block;
+  text-align: left;
 }
-
-.tile .content {
-  padding: 5px;
-  height: calc(~"100% - 75px");
-}
-.tile-content {
+/*  styles for tile cards */
+.tile .tile-content {
+  padding: 10px;
+  height: calc(~"100% - 40px");
   width: 100%;
-  height: 100%;
+  overflow: hidden;
+  box-shadow: inset 0 0 2px #001325;
+  background-color: #fff;
+  border-radius: 5px;
+}
+.tile .tile-title {
+  font-weight: 600;
+  font-size: 18px;
+}
+.tile .tile-dates {
+  color: @darkGrey;
+  font-size: 16px;
+  font-weight: 300px;
+}
+.tile .tile-body {
+  margin-top: 5px;
+}
+.tile-action {
+  width: 100%;
+  height: 40px;
+  position: absolute;
+  bottom: 0;
+  margin: 0;
+  padding-right: 10px;
+}
+.tile-action p {
+  float: right;
+  margin: 0;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+.tile-action p.delete-tile {
+  float: left;
+  margin-left: 5px;
+}
+.tile-action p a {
+  margin: 0;
+  color: #fff;
+}
+.tile-action p a,
+.tile-action p a i {
+  opacity: 0.5;
+}
+.tile-action p a:hover,
+.tile-action p a:hover i {
+  opacity: 1;
+  color: #fff;
 }
 
 /*    Modal styles    */
+#tile-edit-modal,
+#tile-view-modal {
+  width: 80%;
+  max-height: 80%;
+  height: 80%;
+}
 .modal {
   padding: 0;
+  padding-top: 20px;
 }
 .modal-content {
   padding: 20px;
   max-height: calc(~"100% - 70px");
-  overflow-y: scroll;
+  overflow-y: auto;
+}
+/*  styles for tileViewModal  */
+#tile-view-modal {
+  border-style: solid;
+  border-width: 10px;
+  border-radius: 5px;
+}
+#tile-view-modal .modal-content {
+  padding-left: 45px;
+  padding-right: 45px;
+}
+#tile-view-modal .title {
+  font-size: 26px;
+}
+#tile-view-modal .dates {
+  color: @darkGrey;
+  font-size: 20px;
+}
+#tile-view-modal .content {
+  margin-top: 20px;
 }
 .modal-footer {
   width: 100%;
-  height: 45px;
+  height: 55px;
   text-align: right;
+  padding: 5px;
+}
+.modal-fixed-footer .modal-footer {
   position: fixed;
   bottom: 0;
+}
+.modal-footer button {
+  float: right;
+  margin: 5px;
 }
 .progress {
   margin: 0;
   margin-top: 5px;
-  display: none;
 }
-#tile-edit-modal {
-  width: 80%;
-  height: 80%;
+
+
+/*  registration styles */
+#register-form-container {
+  margin-top: 10%;
+  text-align: center;
+}
+#register-form {
+  min-width: 300px;
+}
+#register-form button {
+  margin: 5px;
+  margin-right: 0;
+  float: right;
+}
+
+/*  login styles    */
+#login-modal {
+  max-width: 500px;
+}
+#login-title {
+  padding-bottom: 20px;
+  padding-left: 40px;
+  margin: 0;
+  font-weight: 300;
+  font-variant: small-caps;
+}
+#login-modal .modal-content {
+  overflow-y: auto;
+}
+#login-form button {
+  float: right;
+  margin: 5px;
+}
+
+i.right {
+  margin-left: 5px;
+}
+i.left {
+  margin-right: 5px;
 }
