--- a/tiles.less
+++ b/tiles.less
@@ -344,7 +344,15 @@ nav .nav-wrapper i {
   border-bottom: none;
   border-radius: 10px;
   text-align: left;
+  cursor: pointer;
+  transition: border-color 0.5s ease;
 }
+.tile-placeholder {
+  opacity: 0.5;
+}
+/*.card.tile.ui-sortable-handle {
+  cursor: -webkit-grab;
+}*/
 /*  styles for tile cards */
 .tile .tile-content {
   padding: 10px;
@@ -362,7 +370,7 @@ nav .nav-wrapper i {
 .tile .tile-dates {
   color: @darkGrey;
   font-size: 16px;
-  font-weight: 300px;
+  font-weight: 300;
 }
 .tile .tile-body {
   margin-top: 5px;
@@ -452,6 +460,12 @@ nav .nav-wrapper i {
 .progress {
   margin: 0;
   margin-top: 5px;
+  display: none;
+}
+#pusher-container > .progress {
+  position: fixed;
+  bottom: 0;
+  height: 6px;
 }
 
 
