Replaced local Materialize package with Atmosphere version. Fixed bug where users could not register due to empty cursors registering as non-null objects; lookup is now done with findOne which is truly null when empty.

--- a/tiles.less
+++ b/tiles.less
@@ -64,6 +64,7 @@ html {
   top: 0.5em;
   left: 0.15em;
   color: @darkishGrey;
+  pointer-events: none;
 }
 /* label focus color */
 .input-field input:focus + label ,
