--- a/tiles.less
+++ b/tiles.less
@@ -462,7 +462,7 @@ nav .nav-wrapper i {
 }
 .modal-footer button {
   float: right;
-  margin: 5px;
+  margin: 5px !important;
 }
 .progress {
   margin: 0;
@@ -514,9 +514,15 @@ nav .nav-wrapper i {
 
 
 /*  registration styles */
+#verify-url {
+  width: 100%;
+}
+
 #register-form-container {
+  margin: 0 auto;
   margin-top: 10%;
   text-align: center;
+  width: 500px;
   flex-direction: column;
 }
 #register-options {
@@ -541,10 +547,7 @@ nav .nav-wrapper i {
 #register-options > .left button {
   display: block;
 }
-#register-form {
-  min-width: 300px;
-}
-#register-form button {
+#register-form-container button {
   margin: 15px auto;
 }
 
