--- a/client/views/turnkey/turnkey.html
+++ b/client/views/turnkey/turnkey.html
@@ -8,8 +8,8 @@
 
 <template name="establishURL">
   <form id="verify-url">
+    <span id="url-stub">http://{{hostname}}/</span>
     <div class="input-field">
-      <i class="mdi-social-public left prefix">http://{{hostname}}/</i>
       <input id="user-url" type="text"/>
       <label for="user-url">Public URL</label>
     </div>
