Refactored new user creation process.  Now users register without choosing a URL.  They are, however, funnelled into the URL selection screen whenever logged in until they pick one.  Subsequently, a right menu option called 'Change URL' allows this to be changed whenever.  Added an unstyled notFound template for non-existant pages.

--- a/client/views/loading/loading.html
+++ b/client/views/loading/loading.html
@@ -9,7 +9,7 @@
         </div><div class="circle-clipper right">
           <div class="circle"></div>
         </div>
-      </div>t
+      </div>
 
       <div class="spinner-layer spinner-red">
         <div class="circle-clipper left">
