--- a/client/views/turnkey/turnkey.less
+++ b/client/views/turnkey/turnkey.less
@@ -38,13 +38,23 @@
 
 
 /*  registration styles */
+#setup-instructions {
+  font-size: 30px;
+  margin: 0 auto;
+  padding: 10%;
+}
 #verify-url {
   width: 100%;
+  padding: 10%;
   font-size: 30px;
   position: relative;
-  height: 2.0em;
-  border-bottom: 1px solid @darkishGrey;
+  margin: 0 auto;
   margin-bottom: 15px;
+}
+#verify-url button {
+  margin: 5px;
+  float: right;
+  font-size: 18px;
 }
 #url-stub {
   color: @darkGrey;
@@ -55,18 +65,17 @@
 #verify-url > .input-field {
   position: absolute;
   width: 50%;
-  font-size: 20px;
   left: 50%;
-  top: 3px;
+  top: 0;
   margin: 0;
 }
 #verify-url > .input-field > input {
-  font-size: 20px;
+  font-size: 30px;
   border: none !important;
   box-shadow: none !important;
 }
 #verify-url > .input-field > label {
-  top: 0.92em;
+  top: 15px;
 }
 
 #register-form-container {
@@ -77,6 +86,7 @@
   flex-direction: column;
 }
 #register-options {
+  margin-top: 35px;
   min-width: 500px;
   position: relative;
 }
