404 page now has 4,000% more explosions.  Re-enabled tile CRUD (commented out autocomplete for deployment).  URLs are now verified against an array of banned keywords which are used for Iron:Router paths.  Navbar and right menu are now persistent even across home page and registration pages so users have easy access to login.

--- a/client/views/navbar/navbar.html
+++ b/client/views/navbar/navbar.html
@@ -7,7 +7,9 @@
           <input type="text" id="user-profile-name" class="text-input user-name" placeholder="Your Name" value="{{profileName}}"/>
         </div>
       {{else}}
-        <a class="user-name">{{profileName}}</a>
+        {{#if profileName}}
+          <a class="user-name">{{profileName}}</a>
+        {{/if}}
       {{/if}}
       <a data-sidebar id="right-menu-collapse" href="#"><i class="mdi-navigation-menu"></i></a>
     </div>
