--- a/client/views/right-menu/right-menu.html
+++ b/client/views/right-menu/right-menu.html
@@ -9,7 +9,7 @@
         {{/if}}
       {{else}}
         <li>
-          <a href="#" id="brand-top-right"><i class="mdi-action-view-module"> TilesJS</i></a>
+          <a href="/" id="brand-top-right"><i class="mdi-action-view-module"> TilesJS</i></a>
         </li>
       {{/if}}
     {{#if verify currentUser}}
