--- a/client/views/tile-edit-modal/tile-edit-modal.html
+++ b/client/views/tile-edit-modal/tile-edit-modal.html
@@ -1,7 +1,3 @@
-<template name="categoryResult">
-  <div>{{category}}</div>
-</template>
-
 <template name="tileEditModal">
   <div id="tile-edit-modal" class="modal modal-fixed-footer">
     <div class="modal-content">
@@ -13,9 +9,9 @@
         </div>
         <div class='input-field'>
           <i class="mdi-action-list prefix"></i>
-          <input id='tile-category' type='text' class='tile-category' value="{{currentlyEditing.category}}" />
+          <input id='tile-category' name="categoryresult" type='text' class='tile-category form-control typeahead' autocomplete="off" spellcheck="off" value="{{currentlyEditing.category}}" data-source="categories" data-templates="categoryresult;empty:noresult"/>
           <!--{{> inputAutocomplete settings=settings id="tile-category" class="tile-category" }}-->
-          <!--class='form-control typeahead' data-source="categories" autocomplete="on" spellcheck="off"-->
+          <!--class='tile-category form-control typeahead' data-source="categories" autocomplete="on" spellcheck="off"-->
           <label for='tile-category' class="{{activeOrNot currentlyEditing.category}}">Category</label>
         </div>
       </div>
@@ -48,4 +44,12 @@
       </div>
     </div>
   </div>
+</template>
+
+<template name="categoryresult">
+  <div style="height: 100px; width: 100px; z-index: 1000; position: absolute; top: 0; left: 0;">{{this}}</div>
+</template>
+
+<template name="noresult">
+  No results!
 </template>
