Fixed label and prefix icon behaviour for typeahead inputs by adding custom focus and focusout events for inputs which are .twitter-typeahead children.

--- a/client/views/tile-edit-modal/tile-edit-modal.html
+++ b/client/views/tile-edit-modal/tile-edit-modal.html
@@ -9,7 +9,7 @@
         </div>
         <div class='input-field'>
           <i class="mdi-action-list prefix"></i>
-          <input id='tile-category' name="categoryresult" type='text' class='tile-category form-control typeahead' autocomplete="off" spellcheck="off" value="{{currentlyEditing.category}}" data-source="categories" data-templates="categoryresult;empty:noresult"/>
+          <input id='tile-category' name="categoryresult" type='text' class='tile-category form-control typeahead' autocomplete="off" spellcheck="off" value="{{currentlyEditing.category}}" data-source="categories"/>
           <!--{{> inputAutocomplete settings=settings id="tile-category" class="tile-category" }}-->
           <!--class='tile-category form-control typeahead' data-source="categories" autocomplete="on" spellcheck="off"-->
           <label for='tile-category' class="{{activeOrNot currentlyEditing.category}}">Category</label>
