--- a/tiles.less
+++ b/tiles.less
@@ -57,6 +57,10 @@ i.left {
 }
 
 /*    Inputs    */
+.input-field .twitter-typeahead {
+  margin-left: 3rem;
+  width: calc(~"100% - 3rem")
+}
 .input-field label {
   top: 0.5em;
   left: 0.15em;
