Disabled autocomplete dropdown; now only autocomplete prediction is shown.

--- a/tiles.less
+++ b/tiles.less
@@ -56,6 +56,10 @@ i.left {
   margin-right: 5px;
 }
 
+.tt-dropdown-menu {
+  display: none !important;
+}
+
 /*    Inputs    */
 .input-field .twitter-typeahead {
   margin-left: 3rem;
