Implemented &ndash; symbol for date ranges in tiles and tile view modals.

--- a/client/views/tile-view-modal/tile-view-modal.html
+++ b/client/views/tile-view-modal/tile-view-modal.html
@@ -6,7 +6,7 @@
       </div>
       {{#if hasDates currentlyViewing}}
         <div class="dates">
-          {{formatTileDates currentlyViewing.dates}}
+          {{{formatTileDates currentlyViewing.dates}}}
         </div>
       {{/if}}
       <div class='content'>
