--- a/client/views/tile/tile.html
+++ b/client/views/tile/tile.html
@@ -4,7 +4,7 @@
       <div class="tile-title">{{tile.title}}</div>
       {{#if hasDates tile}}
         <div class="tile-dates">
-          {{formatTileDates tile.dates}}
+          {{{formatTileDates tile.dates}}}
         </div>
       {{/if}}
       <div class="tile-body">
