--- a/tiles.less
+++ b/tiles.less
@@ -136,6 +136,10 @@ i.left {
   text-align: center;
   float: left;
 }
+#tile-container-inner {
+  height: 100%;
+  width: 10px;
+}
 #category-edit-list {
   margin-left: 10%;
   margin-right: 10%;
