Deleting tiles now appropriately closes the tileViewModal on remote clients, with a pop up message saying it doesn't exist.  Looking for a non-existant tile just routes back to home.

--- a/tiles.less
+++ b/tiles.less
@@ -189,6 +189,7 @@ i.left {
 }
 .modal-content {
   padding: 20px;
+  height: calc(~"100% - 70px");
   max-height: calc(~"100% - 70px");
   overflow-y: auto;
 }
