--- a/client/views/right-menu/right-menu.html
+++ b/client/views/right-menu/right-menu.html
@@ -23,28 +23,46 @@
       {{#if categories}}
         {{#if tileSortable}}
           {{#unless categorySortActive}}
-            <li>
-              <a data-sort-tiles>
-                {{#if tileSortActive}}
+            {{#if tileSortActive}}
+              <li>
+                <a data-cancel-sort-tiles>
+                  <i class="mdi-content-clear left"> Cancel Sort</i>
+                </a>
+              </li>
+              <li>
+                <a data-sort-tiles>
                   <i class="mdi-action-done left"> Done</i>
-                {{else}}
+                </a>
+              </li>
+            {{else}}
+              <li>
+                <a data-sort-tiles>
                   <i class="mdi-content-sort left"> Sort Tiles</i>
-                {{/if}}
-              </a>
-            </li>
+                </a>
+              </li>
+            {{/if}}
           {{/unless}}
         {{/if}}
         {{#if categorySortable}}
           {{#unless tileSortActive}}
-            <li>
-              <a data-sort-categories>
-                {{#if categorySortActive}}
+            {{#if categorySortActive}}
+              <li>
+                <a data-cancel-sort-categories>
+                  <i class="mdi-content-clear left"> Cancel Sort</i>
+                </a>
+              </li>
+              <li>
+                <a data-sort-categories>
                   <i class="mdi-action-done left"> Done</i>
-                {{else}}
+                </a>
+              </li>
+            {{else}}
+              <li>
+                <a data-sort-categories>
                   <i class="mdi-content-sort left"> Sort Categories</i>
-                {{/if}}
-              </a>
-            </li>
+                </a>
+              </li>
+            {{/if}}
           {{/unless}}
         {{/if}}
       {{/if}}
