Separated URL/signout menu buttons from tile CRUD buttons.  Added Session var in Iron:Router route that allows for reactive search filtering, by setting Session.set("search", "keywords go here").  Need to look into structuring fulltext MongoDB requests...

--- a/client/views/right-menu/right-menu.less
+++ b/client/views/right-menu/right-menu.less
@@ -20,6 +20,9 @@
   box-sizing: border-box;
   border-bottom: 2px solid;
 }
+#brand-top-right > i {
+  font-variant: small-caps;
+}
 #right-menu ul {
   height: 100%;
   margin: 0;
@@ -44,4 +47,8 @@
 }
 #right-menu ul li:first-of-type:hover > a > #go-to-mypage {
   display: block;
+}
+.menu-divider {
+  pointer-events: none;
+  border-bottom: 2px solid @darkRed;
 }
