--- a/client/views/right-menu/right-menu.html
+++ b/client/views/right-menu/right-menu.html
@@ -67,6 +67,7 @@
         {{/if}}
       {{/if}}
       {{#if currentUser.profile.public_url}}
+        <li class="menu-divider"></li>
         <li>
           <a data-change-url>
               <i class="mdi-action-language left"> Change URL</i>
