--- a/client/views/turnkey/turnkey.html
+++ b/client/views/turnkey/turnkey.html
@@ -66,7 +66,7 @@
 </template>
 
 <template name="login">
-  <div id="login-modal" class="modal modal-fixed-footer">
+  <div id="login-modal" class="modal">
       <div class="modal-content">
         <form id="login-form">
           <h4 id="login-title">Login</h4>
