--- a/client/views/navbar/navbar.less
+++ b/client/views/navbar/navbar.less
@@ -11,21 +11,53 @@ nav {
 nav .input-field {
   display: inline-block;
   margin-top: 0;
+  height: @navbarHeight;
 }
 nav .user-name {
   font-size: 2.1em !important;
   color: #000;
 }
-nav input#user-profile-name {
+#right-menu-collapse {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: @navbarHeight;
+  width: @navbarHeight;
+  text-align: center;
+  color: @lightRed;
+}
+#right-menu-collapse > i {
+  width: 100%;
+  position: absolute;
+  height: 100%;
+  left: 0;
+}
+#right-menu-collapse:hover {
+  color: #fff;
+  background-color: @darkRed;
+}
+nav input#tile-search {
+  margin: 0;
+  margin-left: 3rem;
+  padding-left: 15px;
+  padding-right: 64px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-left-radius: 0;
+  box-sizing: content-box;
+}
+nav input#user-profile-name,
+nav input#tile-search {
   max-width: 250px;
-  margin-top: 14px;
-  right: 5px;
+  margin-top: 0;
+  right: 0;
   position: relative;
   padding-left: 5px;
   box-sizing: border-box;
 }
-nav input#user-profile-name:focus {
-  border-bottom: 2px solid @lightRed;
+nav input#user-profile-name:focus,
+nav input#tile-search:focus {
+  border-left: 2px solid @lightRed;
 }
 nav .nav-wrapper i {
   line-height: inherit;
