Search input icon now changes to an X which will clear the field when clicked, only if it contains text.  Search query is automatically reset when the page is refreshed.

--- a/client/views/navbar/navbar.html
+++ b/client/views/navbar/navbar.html
@@ -14,7 +14,7 @@
       <div class="right">
         {{#if profileName}}
           <div class='input-field'>
-            <i class="mdi-action-search prefix"></i>
+            <i id="tile-search-prefix" class="mdi-action-search prefix"></i>
             <input type="text" id="tile-search" class="text-input" placeholder="Search" value="{{searchQuery}}"/>
           </div>
         {{/if}}
