--- a/tiles.less
+++ b/tiles.less
@@ -49,6 +49,9 @@ html {
 .blue-btn:hover {
   background-color: @darkBlue;
 }
+.pointer {
+  cursor: pointer;
+}
 i.right {
   margin-left: 5px;
 }
@@ -64,10 +67,6 @@ i.left {
   right: 0;
   padding: 10%;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  justify-content: center;
   font-size: 24px;
   line-height: 26px;
   font-family: Roboto Condensed;
