Added shadow effect on Tile content mouseover.  Clicking on content opens a tileViewModal.  Removed pointer cursor from Tile action bars, only pointer on content hover.

--- a/client/views/tile/tile.less
+++ b/client/views/tile/tile.less
@@ -10,7 +10,6 @@
   border-bottom: none;
   border-radius: 10px;
   text-align: left;
-  cursor: pointer;
   transition: border-color 0.5s ease;
 }
 .tile-placeholder {
@@ -24,6 +23,9 @@
   box-shadow: inset 0 0 2px #001325;
   background-color: #fff;
   border-radius: 5px;
+}
+.tile .tile-content:hover {
+  box-shadow: inset 0 0 10px #001325;
 }
 .tile .tile-title {
   font-weight: 600;
