--- a/client/views/tile/tile.html
+++ b/client/views/tile/tile.html
@@ -1,6 +1,6 @@
 <template name="tile">
   <div data-id="{{tile._id}}" class="card tile" style="border-color: {{color}}; background-color: {{color}};">
-    <div class="tile-content">
+    <div class="tile-content pointer">
       <div class="tile-title">{{tile.title}}</div>
       {{#if hasDates tile}}
         <div class="tile-dates">
